Bug-fix (#447).
Changelog excerpt:
- Added horizontal scrollbars for rows generated by IP testing which exceed
  the normal width of the page to prevent page overflow.

--- a/vault/fe_assets/frontend.css
+++ b/vault/fe_assets/frontend.css
@@ -180,3 +180,4 @@ input[type=button].reset:hover,input[type=button].reset:active{color:#f88}
 .toolTip{cursor:help}
 .flexrow{display:flex}
 .flexin{margin-{FE_Align}:-1px;margin-{FE_Align_Reverse}:1px;width:auto;flex-grow:1}
+.xscroller{overflow-x:auto}
